force-app/main/default/objects/UXR_Scout_Help__c/UXR_Scout_Help__c.object-meta.xml
<CustomObject>
    <label>UXR Scout Help</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>UXR Scout Help Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UXR Scout Helps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>