force-app/main/default/objects/UXR_Scout_Help__c/fields/Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>Tab_Name__c</fullName>
    <label>Tab Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Details</fullName>
            </value>
            <value>
                <fullName>Manage participants (Don’t have anyone)</fullName>
            </value>
            <value>
                <fullName>Manage participants (Have people now, haven’t contacted)</fullName>
            </value>
            <value>
                <fullName>Manage participants (Have people now, have been contacted)</fullName>
            </value>
            <value>
                <fullName>Manage participants (Have people now, email is scheduled)</fullName>
            </value>
            <value>
                <fullName>Send survey page (how to link up qualtrics+links)</fullName>
            </value>
            <value>
                <fullName>Invite to interview page (how to link up calendly+links)</fullName>
            </value>
            <value>
                <fullName>Send Follow-up page</fullName>
            </value>
            <value>
                <fullName>Salesforce Search page</fullName>
            </value>
            <value>
                <fullName>Manage CSV page</fullName>
            </value>
            <value>
                <fullName>Emails page</fullName>
            </value>
            <value>
                <fullName>View Schedule Email</fullName>
            </value>
            <value>
                <fullName>Calendar page</fullName>
            </value>
            <value>
                <fullName>Report participation</fullName>
                <label>Results page (default)</label>
            </value>
            <value>
                <fullName>Incentive Approval Page</fullName>
                <label>Results page (after incentives approved/rejected)</label>
            </value>
            <value>
                <fullName>Survey Results</fullName>
            </value>
            <value>
                <fullName>Project is closed</fullName>
            </value>
            <value>
                <fullName>Manage participants (Don?t have anyone)</fullName>
                <isActive>false</isActive>
                <label>Manage participants (Don?t have anyone)</label>
            </value>
            <value>
                <fullName>Manage participants (Have people now, haven?t contacted)</fullName>
                <isActive>false</isActive>
                <label>Manage participants (Have people now, haven?t contacted)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>