force-app/main/default/objects/UXR_Scout_Help__c/fields/Visible_by_Default__c.field-meta.xml
<CustomField>
    <fullName>Visible_by_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible by Default</label>
    <type>Checkbox</type>
</CustomField>